--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,15 @@ group 'com.twilio'
 version '1.0'
 
 apply plugin: 'java'
-apply plugin: 'jetty'
+apply plugin: 'war'
+apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
 
-jettyRun.contextPath = '';
+gretty {
+    httpPort = 8080
+    contextPath = ''
+    logbackConfigFile = "src/main/resources/logback.xml"
+}
+
 sourceCompatibility = 1.8
 
 repositories {
