--- a/build.gradle
+++ b/build.gradle
@@ -12,22 +12,33 @@ gretty {
     jettyXmlFile = "src/main/resources/jetty-logback-access.xml"
 }
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'ch.qos.logback:logback-classic:1.2.2'
-    compile 'ch.qos.logback:logback-access:1.2.2'
-    compile 'javax.servlet:javax.servlet-api:3.1.0'
-    compile 'org.eclipse.jetty:jetty-annotations:9.3.6.v20151106'
-    compile 'com.twilio.sdk:twilio:7.0.0-rc-29'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
+    compile 'ch.qos.logback:logback-access:1.2.3'
+    compile 'javax.servlet:javax.servlet-api:4.0.0'
+    compile 'org.eclipse.jetty:jetty-annotations:9.4.27.v20200227'
+    compile 'com.twilio.sdk:twilio:7.48.0'
 
-    gretty 'ch.qos.logback:logback-classic:1.2.2'
-    gretty 'ch.qos.logback:logback-access:1.2.2'
+    gretty 'ch.qos.logback:logback-classic:1.2.3'
+    gretty 'ch.qos.logback:logback-access:1.2.3'
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-all:1.10.19'
+    testCompile 'junit:junit:4.13'
+    testCompile 'org.mockito:mockito-core:3.3.3'
+}
+
+test {
+    useJUnit()
+    reports {
+        junitXml.enabled = false
+        html.enabled = false
+    }
+    testLogging {
+        exceptionFormat = "full"
+    }
 }
